--- a/iPad_Buy.css
+++ b/iPad_Buy.css
@@ -140,3 +140,9 @@ main{
     border-radius: 10px;
     box-sizing: border-box;
 }
+.box{
+    cursor: pointer;
+}
+.item:nth-child(2) .title h3{
+    font-size: 20px;
+}
