--- a/iPad_Buy.css
+++ b/iPad_Buy.css
@@ -78,7 +78,7 @@ main{
     width: 941px;
     height: 531px;
     position: sticky;
-    top: 0;
+    top: 100px;
     left: 0;
 }
 .container img{
@@ -95,7 +95,7 @@ main{
     align-items: center;
 }
 .item{
-    margin: 0  auto;
+    margin: 0  auto 40px;
 }
 .title{
     width: 328px;
@@ -133,7 +133,7 @@ main{
 }
 .storage_space{
     width: 296px;
-    height: 95px;
+    height: fit-content;
     background-color: #F5F5F7;
     padding: 10px;
     font-size: 14px;
@@ -145,4 +145,15 @@ main{
 }
 .item:nth-child(2) .title h3{
     font-size: 20px;
+}
+.longbox{
+    width: 100%;
+    height: 90px;
+    border: 1px #86868B solid;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-sizing: border-box;
+    padding: 0 20px;
 }
