--- a/iPad_Buy.css
+++ b/iPad_Buy.css
@@ -156,4 +156,6 @@ main{
     align-items: center;
     box-sizing: border-box;
     padding: 0 20px;
+    margin-bottom: 20px;
+    cursor: pointer;
 }
