--- a/iPad_Buy.css
+++ b/iPad_Buy.css
@@ -159,3 +159,25 @@ main{
     margin-bottom: 20px;
     cursor: pointer;
 }
+footer{
+    margin-top: 30px;
+}
+footer p{
+    color: #86868b;
+    font-size: 14px;
+    margin: 20px 0;
+}
+footer p:nth-child(1){
+    color: black;
+    font-size: 28px;
+    font-weight: 700;
+    line-height: 35px;
+}
+footer button{
+    color: white;
+    width: 328px;
+    height: 50px;
+    font-size: 17px;
+    background-color: #0071e3;
+    border-radius: 10px;
+}
